--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ Strategic Advisor</p>
     <div class="row">
       <div class="col-sm-4">
         <div class="thumbnail">
-          <img src="a.jpg" alt="Project 1" style="width:100%">
+          <img src="a.JPG" alt="Project 1" style="width:100%">
           <div class="caption">
             <h3>Project One</h3>
             <p>Short description of project one.</p>
@@ -267,3 +267,4 @@ html, body {
 
 </body>
 </html>
+
